--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2 {
     margin-top: 20px;
     font-style: italic;
 }
-input[type=text], select, textarea {
+input[type=text] {
   width: 40%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -35,5 +35,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  /* float: right; */
+}
+input[type=submit]:hover {
+  background-color: #45a049;
 }
