--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     text-align: center;
     width: 60%;
     border-radius: 8px;
+    padding: 20px;
 
 }
 h1 {
@@ -39,3 +40,10 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #45a049;
 }
+
+/* Empty div - add styles
+.guest-list p {
+    font-size: 20px;
+    color: #333;
+    margin: 10px 0;
+} */
