--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ h2 {
     margin-top: 20px;
     font-style: italic;
 }
+p {
+  font-size: 20px;
+  font-style: italic;
+}
+
 input[type=text] {
   width: 40%;
   padding: 12px;
